[workspace]

members = [
	"services/crud",
	"services/gateway",
	"services/payments",
	"libs/models",
	"libs/auth",
	"libs/payments-lib",
	"services/serverless/instance-deploy",
	"services/serverless/pudo-update"
]

[workspace.dependencies]
diesel = "1.4"
axum = "0.5"
actix-web = "4"
