[workspace]

members = [
	"services/crud",
	"services/gateway",
	"services/payments",
	"libs/models",
	"libs/auth",
	"libs/payments-lib",
	"services/serverless/serverless-util",
	"services/serverless/instance-deploy",
	"services/serverless/app-update"
]

[workspace.dependencies]
diesel = "1.4"
axum = "0.5"
actix-web = "4"
