[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
axum = ["dep:axum"]
actix = ["dep:actix-web"]
diesel = ["models/diesel"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
models = { path = "../models", default-features = false }
axum = { version = "0.5", optional = true }
actix-web = { version = "4", optional = true }

[lib]
name = "auth"
path = "src/lib.rs"
