[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
diesel = ["dep:diesel"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { workspace = true, optional = true, features = ["postgres", "r2d2", "chrono"] }
validator = { version = "0.16", features = ["derive"] }
regex = "1"
lazy_static = "1"

[lib]
name = "models"
path = "src/lib.rs"
