[package]
name = "payments-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
diesel = ["models/diesel"]

[dependencies]
serde = { version = "1", features = ["derive"] }
models = { path = "../models", default-features = false }

[lib]
name = "payments_lib"
path = "src/lib.rs"
