[package]
name = "crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { worspace = true }
reqwest = { version = "0.11", features = ["blocking", "json", "rustls"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
diesel = { workspace = true, features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9.0"
nanoid = "0.4"
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"
futures-util = "0.3"
thiserror = "1.0"
bcrypt = "0.13"
lazy_static = "1.4"
log = "0.4"
aws-config = "0.47"
aws-sdk-elasticbeanstalk = "0.17"
aws-sdk-route53 = "0.17"
models = { path = "../../libs/models", features = ["diesel"] }
auth = { path = "../../libs/auth", features = ["actix", "diesel"] }
payments-lib = { path = "../../libs/payments-lib", features = ["diesel"] }

[dev-dependencies]
actix-http = "3"

[[bin]]
name = "crud"
path = "src/main.rs"
