[package]
name = "payments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
async-stripe-tsar = { version = "*", default-features = false, features = ["runtime-tokio-hyper", "billing", "webhook-events", "checkout", "connect"] }
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
payments-lib = { path = "../../libs/payments-lib" }
models = { path = "../../libs/models" }
auth = { path = "../../libs/auth", features = ["axum"] }

[[bin]]
name = "payments"
path = "src/main.rs"
