[package]
name = "app-update"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand

[dependencies]

lambda_runtime = "0.7"
itertools = "0.10"
serde = "1.0.136"
serde_json = "1.0.86"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
aws-config = "0.49.0"
aws-sdk-elasticbeanstalk = "0.19"
serverless-util = { path = "../serverless-util" }

