[package]
name = "instance-deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1"
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# NOTE: the following crate is not part of the SDK, but it is maintained by AWS.
lambda_runtime = "0.7"
aws-config = "0.49.0"
aws-sdk-elasticbeanstalk = "0.19"
aws-sdk-route53 = "0.19"
aws-sdk-elasticloadbalancingv2 = "0.19"
aws-sdk-sqs = "0.19"
dotenvy = "0.15.5"
nanoid = "0.4"
lazy_static = "1"
reqwest = { version = "0.11", default-features = false, features = ["json"] }

[[bin]]
name = "deploy"
path = "src/deploy.rs"

[[bin]]
name = "config"
path = "src/config.rs"

[[bin]]
name = "fail"
path = "src/fail.rs"
