[package]
name = "serverless-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
aws-smithy-http = "0.49"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }